[package]
name = "rplace-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
flate2 = "1.0.28"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
snafu = "0.7.5"
csv = "1.3.0"
lazy_static = "1.4.0"
rayon = "1.8.0"
winit = "0.29.3"
log = "0.4"
# wgpu = { version = "0.18.0", features = ["vulkan-portability", "spirv"] }
env_logger = "0.10"
pollster = "0.3.0"
# bytemuck = { version = "1.14.0", features = ["derive"] }
# cgmath = "0.18.0"
# crevice = { version = "0.14.0", features = ["cgmath"] }
vulkano = "0.34.1"
vulkano-util = "0.34.1"
vulkano-shaders = "0.34.0"
[profile.release]
debug = true

[profile.dev]
opt-level = 1
